tweaks to json / model output